@@ -41,7 +41,7 @@ PROCESS_PREDICTOR_CMD=python
 
 # for spartitoSolver
 #SPARTITO_ROOT=
-#SOLUTION_STORE=				[required]
+SOLUTION_STORE={"local": "cache.local"}
 
 
 ENCODEC_PRETRAINED=facebook/encodec_24khz
